--- a/index.html
+++ b/index.html
@@ -1153,7 +1153,7 @@
 				<li class="timeline-item">
 				  <h4 class="h4 timeline-item-title">
 					<a class="h4 article-title" href="https://sujithmu.github.io/sujithportfolio.github.io/" target="_blank">
-						URL: My Portofolio
+						URL: My Portfolio
 					</a>
 					<a class="h5 article-title" href="https://github.com/sujithmu/sujithportfolio.github.io" target="_blank">
 						Git URL: My Pesonal Portfolio
