--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my_dp2.png" alt="Sujith Unnikrishnan" width="80">
+          <img src="./assets/images/my_dp.jpg" alt="Sujith Unnikrishnan" width="80">
         </figure>
 
         <div class="info-content">
