Updated index file.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <section class="about-text">
           <div class="line-1 anim-typewriter">HI, MY NAME IS SUJITH</div>
           <p>
-           Hi! I have almost 8 years of expertise as a frontend developer. Anything involving Javascript, including Vanilla JS, Angular, and React or Ext, is my ultimate favorite! I constantly want to learn new things and I adore a good JS challenge. Making challenging problems simple for others to use makes me happy.
+           Hi! I have almost 7+ years of expertise as a frontend developer. Anything involving Javascript, including Vanilla JS, Angular, and React or Ext, is my ultimate favorite! I constantly want to learn new things and I adore a good JS challenge. Making challenging problems simple for others to use makes me happy.
           </p>
           <p>
            Aspects like markup, UX, design, reusable CSS, and accessibility are also very important to me. For me, a solution only achieves true success when it benefits the user, improves the developer experience, and yields favorable results for the company. The thing that truly makes me happy is seeing how content and happy everyone is with the outcome.
