Adding CV QR code.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
 
         </ul>
 
-        <div class="separator"></div>
+        <div class="separator"><address style="color: white;margin-left: 64px;">Download CV</address></div>
+
+		<img src="./assets/images/Sujith_CV.png" alt="sodexo" width="120" height="120" style="margin-left: 60px;">
+		
+		<div class="separator"></div>
 
         <ul class="social-list">
 
