Updated CV link

--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
 
         </ul>
 
-        <div class="separator"><address style="color: white;margin-left: 64px;">Download CV</address></div>
-
-		<img src="./assets/images/Sujith_CV.png" alt="sodexo" width="120" height="120" style="margin-left: 60px;">
+        <!-- <div class="separator"><address style="color: white;margin-left: 64px;">Download CV</address></div> -->
+		<div class="separator"></div>
+		<a href="https://drive.google.com/file/d/1CTnFjew2HRCmygVcx6y6ouUqrHGiSWoP/view" style="color: blue;margin-left: 64px;">Download CV</a>
+		<!-- <img src="./assets/images/Sujith_CV.png" alt="sodexo" width="120" height="120" style="margin-left: 60px;"> -->
 		
 		<div class="separator"></div>
 
